{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 192,
  "lineage": "3a1ff06f-9f42-ec0a-37ab-41cefb831d76",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "App-LoadBalacer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/frontendIPConfigurations/frontend-ip",
                "load_balancer_rules": [
                  "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/loadBalancingRules/LBRule"
                ],
                "name": "frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/publicIPAddresses/LoadBalacerPublicIp"
              }
            ],
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer",
            "location": "eastus",
            "name": "App-LoadBalacer",
            "resource_group_name": "Week_5_terraform",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.LoadBalacerPublicIp",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "AppScaleSet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Compute/virtualMachineScaleSets/AppScaleSet/virtualMachines/0/networkInterfaces/AppScaleSet-nic/ipConfigurations/internal",
              "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Compute/virtualMachineScaleSets/AppScaleSet/virtualMachines/1/networkInterfaces/AppScaleSet-nic/ipConfigurations/internal"
            ],
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/backendAddressPools/AppScaleSet",
            "load_balancing_rules": [
              "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer",
            "name": "AppScaleSet",
            "resource_group_name": "Week_5_terraform"
          },
          "dependencies": [
            "azurerm_lb.App-LoadBalacer",
            "azurerm_public_ip.LoadBalacerPublicIp",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "Helthprobe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/probes/Helthprobe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/loadBalancingRules/LBRule"
            ],
            "loadbalancer_id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer",
            "name": "Helthprobe",
            "number_of_probes": 2,
            "port": 8080,
            "protocol": "Tcp",
            "resource_group_name": "Week_5_terraform"
          },
          "dependencies": [
            "azurerm_lb.App-LoadBalacer",
            "azurerm_public_ip.LoadBalacerPublicIp",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "AcceseRole",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/backendAddressPools/AppScaleSet",
            "backend_address_pool_ids": [
              "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/backendAddressPools/AppScaleSet"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/frontendIPConfigurations/frontend-ip",
            "frontend_ip_configuration_name": "frontend-ip",
            "frontend_port": 8080,
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer",
            "name": "LBRule",
            "probe_id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/loadBalancers/App-LoadBalacer/probes/Helthprobe",
            "protocol": "Tcp",
            "resource_group_name": "Week_5_terraform"
          },
          "dependencies": [
            "azurerm_lb.App-LoadBalacer",
            "azurerm_lb_backend_address_pool.AppScaleSet",
            "azurerm_lb_probe.Helthprobe",
            "azurerm_public_ip.LoadBalacerPublicIp",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "PgDataServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/networkInterfaces/PgDataServer-nic",
            "internal_domain_name_suffix": "hlfeflzqk5nuhetmaxtp22o3uc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.30.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/virtualNetworks/HighAvailability-Net/subnets/Data_Tier"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-19-BA-92",
            "name": "PgDataServer-nic",
            "private_ip_address": "10.30.2.4",
            "private_ip_addresses": [
              "10.30.2.4"
            ],
            "resource_group_name": "Week_5_terraform",
            "virtual_machine_id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Compute/virtualMachines/PgDataServer-vm"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_subnet.Data_Tier",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/networkSecurityGroups/NSG1",
            "location": "eastus",
            "name": "NSG1",
            "resource_group_name": "Week_5_terraform",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test123",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/networkSecurityGroups/NSG2",
            "location": "eastus",
            "name": "NSG2",
            "resource_group_name": "Week_5_terraform",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Allow_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/networkSecurityGroups/NSG1/securityRules/test123",
            "name": "test123",
            "network_security_group_name": "NSG1",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Week_5_terraform",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.NSG1",
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "BastionPublicIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/publicIPAddresses/BastionPublicIp",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.121.73.222",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "BastionPublicIp",
            "resource_group_name": "Week_5_terraform",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "LoadBalacerPublicIp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/publicIPAddresses/LoadBalacerPublicIp",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.121.73.232",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "LoadBalacerPublicIp",
            "resource_group_name": "Week_5_terraform",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "AzureBastionSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.30.3.0/24",
            "address_prefixes": [
              "10.30.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/virtualNetworks/HighAvailability-Net/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "Week_5_terraform",
            "virtual_network_name": "HighAvailability-Net"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Data_Tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.30.2.0/24",
            "address_prefixes": [
              "10.30.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/virtualNetworks/HighAvailability-Net/subnets/Data_Tier",
            "name": "Data_Tier",
            "resource_group_name": "Week_5_terraform",
            "virtual_network_name": "HighAvailability-Net"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Web_Tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.30.1.0/24",
            "address_prefixes": [
              "10.30.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/virtualNetworks/HighAvailability-Net/subnets/Web_Tier",
            "name": "Web_Tier",
            "resource_group_name": "Week_5_terraform",
            "virtual_network_name": "HighAvailability-Net"
          },
          "dependencies": [
            "azurerm_resource_group.RG",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "NSG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/virtualNetworks/HighAvailability-Net/subnets/Web_Tier",
            "network_security_group_id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/networkSecurityGroups/NSG1",
            "subnet_id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/virtualNetworks/HighAvailability-Net/subnets/Web_Tier"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG1",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Web_Tier",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "NSG2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/virtualNetworks/HighAvailability-Net/subnets/Data_Tier",
            "network_security_group_id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/networkSecurityGroups/NSG2",
            "subnet_id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/virtualNetworks/HighAvailability-Net/subnets/Data_Tier"
          },
          "dependencies": [
            "azurerm_network_security_group.NSG2",
            "azurerm_resource_group.RG",
            "azurerm_subnet.Data_Tier",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.30.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "af42ca3a-5730-43db-926c-05e6fe71dda2",
            "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/virtualNetworks/HighAvailability-Net",
            "location": "eastus",
            "name": "HighAvailability-Net",
            "resource_group_name": "Week_5_terraform",
            "subnet": [
              {
                "address_prefix": "10.30.1.0/24",
                "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/virtualNetworks/HighAvailability-Net/subnets/Web_Tier",
                "name": "Web_Tier",
                "security_group": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/networkSecurityGroups/NSG1"
              },
              {
                "address_prefix": "10.30.2.0/24",
                "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/virtualNetworks/HighAvailability-Net/subnets/Data_Tier",
                "name": "Data_Tier",
                "security_group": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/networkSecurityGroups/NSG2"
              },
              {
                "address_prefix": "10.30.3.0/24",
                "id": "/subscriptions/937c0bd1-f26f-49a4-9db5-d5ded6945cca/resourceGroups/Week_5_terraform/providers/Microsoft.Network/virtualNetworks/HighAvailability-Net/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.RG"
          ]
        }
      ]
    }
  ]
}